--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ author :
   name : Stratify Labs, Inc
   email : tyler@stratifylabs.co
   github : tyler-gilbert
-  twitter : 
+  twitter : StratifyLabs
   feedburner : 
 
 collections:
@@ -34,6 +34,8 @@ collections:
   sgfx:
     output: true
     permalink: /:collection/:path:output_ext
+
+twitter_username: StratifyLabs
 
 
 
